tests/typec-test/test_out/struct-cycle.txt
error: infinitly sized type detected
 --> struct-cycle/root.ctl:5:8
  |
1 | struct A {
  |        ^ this type is part of the cycle
2 |     b: B
3 | }
4 | 
5 | struct B {
  |        ^ this type is part of the cycle
  |
  = info: the cycle: 6\A -> 6\B -> 6\A

